--- a/src/main/resources/assets/edd/lang/en_us.json
+++ b/src/main/resources/assets/edd/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "block.edd.sculk_mushroom": "Sculk Mushroom",
   "item.edd.sculk_remover": "Sculk Remover",
+  "item.edd.sculk_soup": "Sculk Soup",
 
 
 
