--- a/src/main/resources/assets/edd/lang/en_us.json
+++ b/src/main/resources/assets/edd/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "block.edd.sculk_mushroom": "Sculk Mushroom",
+  "block.edd.sculk_grower": "Sculk Grower",
+  "block.edd.deep_board": "Deep Dark Special board",
   "item.edd.sculk_remover": "Sculk Remover",
   "item.edd.sculk_soup": "Sculk Soup",
 
